<resources>
    <string name="app_name">Penjat</string>
    <string name="penjat">Penjat</string>
    <string name="txtEmail">Introdueix el teu correu electronic</string>
    <string name="exampleEmail">example@example.com</string>
    <string name="txtPassword">Introdueix la contrasenya</string>
    <string name="errors">Errors:</string>
    <string name="email">Email</string>
    <string name="lletres_provades">Lletres provades</string>
    <string name="imatge_penjat">Imatge Penjat</string>
    <string name="paraula_secreta">Paraula Secreta</string>
    <string name="introdueix_una_lletra">Introdueix una lletra majúscula</string>
    <string name="envia">envia</string>
    <string name="tens_una_partida_iniciada">Tens una partida iniciada</string>
    <string name="que_vols_fer">Què vols fer?</string>
    <string name="recuperar_partida">Recuperar Partida</string>
    <string name="nova_partida">Nova partida</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Iniciar Sessió</string>
    <string name="title_activity_game_won">GameWonActivity</string>
    <string name="logout">LogOut</string>
    <string name="tancar_sessio">Tancar Sessio</string>
    <string name="felicitats">Felicitats</string>
    <string name="penjat_imatge">penjat imatge</string>
    <string name="username">username</string>
    <string name="has_perdut">Has perdut</string>
    <string name="penjat_0_fallos">Penjat 0 fallos</string>
    <string name="penjat_6_fallos">Penjat 6 fallos</string>
    <string name="ranking">ranking</string>
    <string name="millors_jugadors">Millors jugadors</string>
    <string name="registre">Registre</string>
    <string name="repeteix_la_contrasenya">Repeteix la contrasenya</string>
    <string name="iniciar_sessi">Iniciar sessió</string>
    <string name="has_oblidat_la_contrasenya">Has oblidat la contrasenya?</string>
    <string name="recuperar_contrasenya">Recuperar Contrasenya</string>
    <string name="nova_contrasenya">Nova Contrasenya</string>
    <string name="repeteix_nova_contrasenya">Repeteix nova contrasenya</string>
    <string name="compartir">Compartir</string>
    <string name="msgTitol">He guanyat al penjat</string>
    <string name="msgTitolP">He perdut al penjat</string>
    <string name="msgSecreta">La paraula secreta era %1$s</string>
    <string name="msgUsername">Jugador: %1$s</string>
    <string name="continuar">Continuar</string>
    <string name="integrasion">Integració de Firebase completa</string>
    <string name="error1">Error con el Inicio de Sessión</string>
    <string name="error2">S\'ha produït un error </string>
    <string name="error3">en intentar iniciar sessió\n\n</string>
    <string name="error4">Consideri la possibilitat que aquest usuari no estigui registrat.</string>
    <string name="vacio">Els camps estan buits</string>
    <string name="acceptar">Acceptar</string>
    <string name="benvigut">Benvingut %1$s</string>
    <string name="nope">No has introduit cap lletra</string>
    <string name="noconte">Aquesta paraula no conté la lletra %1$s.</string>
    <string name="provat">Aquesta lletra ja l\'has provat.</string>
    <string name="noes">El caràcter introduït no és una lletra.</string>
    <string name="errornum">Error amb el numero de errors</string>
    <string name="secreta">La paraula secreta era: %1$s</string>
    <string name="compart">Compartir amb: </string>
    <string name="format">Format del correu electrònic incorrecte</string>
    <string name="intro">Falta introduir la contrasenya.\n</string>
    <string name="repe">Falta introduir la contrasenya repetida.\n</string>
    <string name="coinci">Les contrasenyes no coincideixen.\n</string>
    <string name="canvi">S\'ha canbiat la contrasenya</string>
    <string name="errorinici">Error en inici de sessió</string>
    <string name="regist">L\'usuari no està registrat</string>
    <string name="falta1">Falta introduir el correu electronic.\n</string>
    <string name="falta2">Format correu electronic incorrecte.\n</string>
    <string name="falta3">Falta introduir la contrasenya.\n</string>
    <string name="falta4">Falta introduir la contrasenya repetida.\n</string>
    <string name="errormsg1">La contrasenya ha de ser mínim de 6 caracters\n</string>
    <string name="errormsg2">La contrasenya repetida ha de ser mínim de 6 caracters\n</string>
    <string name="errormsg3">Les contrasenyes no coincideixen.\n</string>
    <string name="err1">Error amb el registre</string>
    <string name="err2">S\'ha produït un error en </string>
    <string name="err3">intentar registrar a aquest usuari\n\n</string>
    <string name="err4">Consideri la possibilitat que aquest usuari ja estigui registrat</string>
    <string name="errorhora">Error a l\'hora de fer el guardat de usuari</string>
    <string name="selecciona_el_teu_idioma">Selecciona el teu idioma</string>

</resources>