<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFons"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/email"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/penjat"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imatge_penjat"
                app:srcCompat="@mipmap/penjat0_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPIniciada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/paraula_secreta"
                    android:textAlignment="center"
                    android:textColor="#78909C"
                    android:textSize="34sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/txtErrors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/errors"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtNumErrors"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lletres_provades"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTryedLetters"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorFons"
            android:ems="10"
            android:hint="@string/introdueix_una_lletra"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/enviaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envia"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>